<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#EAF6FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_card_profile"
        android:padding="22dp"
        android:elevation="6dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/saya"
            android:layout_marginBottom="18dp"
            android:contentDescription="Foto Profil" />

        <TextView
            android:text="@string/nama"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1D3557"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/nim"
            android:textSize="14sp"
            android:textColor="#6C757D"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/email"
            android:autoLink="email"
            android:textSize="14sp"
            android:textColor="#6C757D"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/bandung"
            android:textSize="14sp"
            android:textColor="#6C757D"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tentang"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textColor="#1D3557"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/about"
            android:textSize="14sp"
            android:textColor="#6C757D"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
